<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_sim_apriltags</name>
  <version>1.0.0</version>
  <description>AprilTag simulation: known marker positions and fake proximity-based detector</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml_cpp_vendor</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
