<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_sim_drive</name>
  <version>1.0.0</version>
  <description>ODrive-realistic wheel shaping node for simulation: replicates zero-vel epsilon, acceleration limiting, and min effective velocity from the real odrive_can_node</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
